--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-md bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-                Rolling Health Consultorios
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse d-md-block" id="navbarNav">
+            <div class="container-fluid d-flex justify-content-between">
+                <div class="navbar-logo col-md-4 d-flex justify-content-between col-12">
+                    <a class="navbar-brand" href="#">
+                        <img src="./src/iconos/health-icon.svg" alt="Logo" width="50" height="40" class="d-inline-block align-text-center">
+                    Rolling Consultorios
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse d-md-flex justify-content-between align-items-center" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
@@ -30,13 +32,13 @@
                             <a class="nav-link" href="#">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" aria-disabled="true">Contacto</a>
+                            <a class="nav-link" href="#">Contacto</a>
                         </li>
                     </ul>
-                </div>
-                <div class="btn-reg-log d-flex gap-2 align-items-center" id="btn-reg-log">
-                    <button class="btn btn-outline-primary">Registro</button>
-                    <button class="btn btn-success" id="btn-login">Login</button>
+                    <div class="btn-reg-log d-flex gap-2 align-items-center" id="btn-reg-log">
+                        <button class="btn btn-outline-primary">Registro</button>
+                        <button class="btn btn-primary" id="btn-login">Login</button>
+                    </div>
                 </div>
                 <dialog id="modal-login">
                     <form method="dialog" id="form-login">
