--- a/index.html
+++ b/index.html
@@ -7,20 +7,21 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./src/css/styles.css">
 </head>
-<body>
+<body class="content">
     <header>
-        <nav class="navbar navbar-expand-md bg-body-tertiary">
+        <!-- bg-body-tertiary -->
+        <nav class="navbar navbar-expand-md">
             <div class="container-fluid d-flex justify-content-between">
                 <div class="navbar-logo col-md-4 d-flex justify-content-between col-12">
                     <a class="navbar-brand" href="#">
                         <img src="./src/iconos/health-icon.svg" alt="Logo" width="50" height="40" class="d-inline-block align-text-center">
                     Rolling Consultorios
                     </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" popovertarget="menu-nav">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 </div>
-                <div class="collapse navbar-collapse d-md-flex justify-content-between align-items-center" id="navbarNav">
+                <div class="d-md-flex justify-content-between align-items-center d-none" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Inicio</a>
@@ -35,10 +36,46 @@
                             <a class="nav-link" href="#">Contacto</a>
                         </li>
                     </ul>
-                    <div class="btn-reg-log d-flex gap-2 align-items-center" id="btn-reg-log">
+                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0" id="btn-reg-log">
                         <button class="btn btn-outline-primary">Registro</button>
                         <button class="btn btn-primary" id="btn-login">Login</button>
                     </div>
+                </div>
+                <!-- <div class="collapse navbar-collapse d-md-flex justify-content-between align-items-center" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contacto</a>
+                        </li>
+                    </ul>
+                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0" id="btn-reg-log">
+                        <button class="btn btn-outline-primary">Registro</button>
+                        <button class="btn btn-primary" id="btn-login">Login</button>
+                    </div>
+                </div> -->
+                <div class="menu-nav" id="menu-nav" popover role="menu">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contacto</a>
+                        </li>
+                    </ul>
                 </div>
                 <dialog id="modal-login">
                     <form method="dialog" id="form-login">
