--- a/src/paginas/paciente.html
+++ b/src/paginas/paciente.html
@@ -37,7 +37,7 @@
                     </div>
                     <div class="mb-3 col-12 d-flex flex-column">
                       <label for="inputSintomas" class="form-label">Sintomas:</label>
-                      <textarea name="inputSintomas" id="inputSintomas" cols="30" rows="5"></textarea>
+                      <textarea class="p-2 rounded-3 border border-1 form-control" name="inputSintomas" id="inputSintomas" cols="30" rows="5"></textarea>
                     </div>
                     <div class="mb-3 col-12">
                       <label for="inputFecha" class="form-label">Fecha Turno</label>
