cambios esteticos en la pagina

--- a/pageMedico.html
+++ b/pageMedico.html
@@ -163,25 +163,10 @@
               srcset=""
             />
           </div>
-          <div class="col-lg-10 col-md-8">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
-            voluptate impedit voluptatum, enim adipisci veniam ad! Magni illum
-            nam iure illo odit quis in. Consequuntur omnis consequatur placeat
-            tempora! Quae voluptate officia placeat ab molestiae dicta,
-            exercitationem quos accusamus aspernatur delectus consectetur rerum.
-            Repudiandae, numquam perferendis. Provident quia ad, animi quisquam
-            magnam, officiis dolorum iste dolor asperiores soluta nisi qui
-            itaque quam saepe minima necessitatibus ex voluptatem veniam, odio
-            ipsum possimus quo. Recusandae error quasi repudiandae. Accusantium
-            nobis necessitatibus eligendi quas officia aspernatur ea earum iste.
-            Voluptas incidunt repudiandae expedita. Blanditiis quod maiores ab
-            cumque voluptas? Odit facilis officiis iusto praesentium, corrupti,
-            in, fuga quas quidem est excepturi ipsum doloremque asperiores dolor
-            voluptatum laudantium debitis corporis. Consequatur commodi,
-            doloribus voluptates asperiores earum ullam ut quasi quas dolores
-            maiores blanditiis repudiandae harum iste qui beatae dignissimos
-            omnis sit natus, atque modi nostrum ad. Nulla quia delectus placeat
-            nihil. Qui, corporis nesciunt.
+          <div class="col-lg-10 col-md-8" id="textoBanner">
+            <h2><i class="fa-solid fa-stethoscope"></i> Bienvenido Dr/Dra:</h2>
+            <h3>En este panel podras ver todos los turnos que tienes pendientes para esta semana.</h3>
+            <h5></h5>
           </div>
         </div>
       </section>
@@ -191,14 +176,14 @@
         <table class="table table-hover" id="tablaTurnos" >
             <thead>
                 <tr>
-                  <th scope="col">#</th>
+                  <th scope="col"><i class="fa-solid fa-user"></i></th>
                   <th scope="col">Paciente</th>
-                  <th scope="col">Fecha y hora</th>
-                  <th scope="col">Editar</th>
+                  <th scope="col"><i class="fa-solid fa-clock"></i></th>
+                  <th scope="col">Control</th>
                 </tr>
               </thead>
-              <tbody id="datos">
-               
+              <tbody >
+               <tr></tr>
               </tbody>
         </table>
       </section>
