cambios esteticos al footer

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="m-3"><img src="./img/ministerioSalud.jpg" alt="" srcset=""> </div>
             </div>
         <div class="col-lg-4 d-flex justify-content-center align-items-center bordesFooter align-self-stretch" > 
-            <ul>
+            <ul class="p-1">
                 <li class="list-group-item mb-2"><a href="#" target="_blank">Mis turnos</a></li>
                 <li class="list-group-item mb-2"><a href="#" target="_blank">Contacto</a></li>
                 <li class="list-group-item mb-2"><a href="#" target="_blank">Politicas de Privacidad</a></li>
