cambios esteticos al footer3

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
     <footer>
-        <article class="container-fluid row d-flex justify-content-lg-around justify-content-md-around align-items-center">
+        <article class="container-fluid row d-flex justify-content-lg-around justify-content-center justify-content-md-around align-items-center">
         <div class="col-lg-4 d-flex justify-content-around align-items-center bordesFooter align-self-stretch" >
             <h3><i class="fa-solid fa-truck-medical fa-fade fa-2xl"> </i>           </h3>    
             <div class="m-3"><img src="./img/ministerioSalud.jpg" alt="" srcset=""> </div>
