--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
 
     <footer>
-        <article class="container-fluid row d-flex justify-content-lg-around justify-content-center justify-content-md-around align-items-center">
-        <div class="col-lg-4 d-flex justify-content-around align-items-center bordesFooter align-self-stretch" >
+        <article class="container-fluid row d-flex justify-content-lg-around justify-content-center justify-content-md-around align-items-center m-0 p-0">
+        <div class="col-lg-4 d-flex col-6 justify-content-around align-items-center bordesFooter align-self-stretch" >
             <h3><i class="fa-solid fa-truck-medical fa-fade fa-2xl"> </i>           </h3>    
             <div class="m-3"><img src="./img/ministerioSalud.jpg" alt="" srcset=""> </div>
             </div>
-        <div class="col-lg-4 d-flex justify-content-center align-items-center bordesFooter align-self-stretch" > 
+        <div class="col-lg-4 d-flex col-6  align-items-center bordesFooter align-self-stretch" > 
             <ul class="p-1">
                 <li class="list-group-item mb-2"><a href="#" target="_blank">Mis turnos</a></li>
                 <li class="list-group-item mb-2"><a href="#" target="_blank">Contacto</a></li>
@@ -29,9 +29,8 @@
                 <li class="list-group-item mb-2"><a href="#" target="_blank">Ministerio de salud</a></li>
               </ul>
         </div>
-        <div class="col-lg-4 d-flex justify-content-center align-items-center bordesFooter align-self-stretch" > 
-            
-            <div class="col">
+        <div class="col-lg-4 d-flex col-12 justify-content-center align-items-center bordesFooter align-self-stretch" > 
+            <div class="col justify-content-center" id="redesSocialesFooter">
                 <h4>Nuestras redes sociales</h4>
                 <a href="#" target="_blank"><i class="fa-brands fa-x-twitter fa-lg m-2"></i></a>
                 <a href="#" target="_blank"><i class="fa-brands fa-facebook fa-lg m-2"></i></a>
