arregle el codigo para que se vea mas legible

--- a/pageMedico.html
+++ b/pageMedico.html
@@ -173,7 +173,7 @@
 
       <section>
         <h2>Turnos</h2>
-        <table class="table table-hover" id="tablaTurnos" >
+        <table class="table table-hover" >
             <thead>
                 <tr>
                   <th scope="col"><i class="fa-solid fa-user"></i></th>
@@ -182,8 +182,8 @@
                   <th scope="col">Control</th>
                 </tr>
               </thead>
-              <tbody >
-               <tr></tr>
+              <tbody id="tablaTurnos" >
+               
               </tbody>
         </table>
       </section>
@@ -231,6 +231,6 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="./src/js/script.js"></script>
+    <script type="module" src="./src/js/scriptNuevo.js"></script>
   </body>
 </html>
