--- a/pageMedico.html
+++ b/pageMedico.html
@@ -232,5 +232,6 @@
       crossorigin="anonymous"
     ></script>
     <script type="module" src="./src/js/scriptNuevo.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
