avanzo sobre el boton borrar

--- a/pageMedico.html
+++ b/pageMedico.html
@@ -164,7 +164,7 @@
             />
           </div>
           <div class="col-lg-10 col-md-8" id="textoBanner">
-            <h2><i class="fa-solid fa-stethoscope"></i> Bienvenido Dr/Dra:</h2>
+            <h2><i class="fa-solid fa-stethoscope"></i> Bienvenido/a <span id="spanUser"></span></h2>
             <h3>En este panel podras ver todos los turnos que tienes pendientes para esta semana.</h3>
             <h5></h5>
           </div>
