--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-md ">
             <div class="container-fluid d-flex justify-content-between">
                 <div class="navbar-logo col-md-4 d-flex justify-content-between col-12">
-                    <a class="navbar-brand text-light" href="#">
+                    <a class="navbar-brand" href="#">
                         <img src="./src/iconos/health-icon.svg" alt="Logo" width="50" height="40" class="d-inline-block align-text-center">
                     Rolling Consultorios
                     </a>
