--- a/src/paginas/error404.html
+++ b/src/paginas/error404.html
@@ -7,13 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body class="content">
+<body class="body-container">
     <header>
         <!-- bg-body-tertiary -->
         <nav class="navbar navbar-expand-md ">
             <div class="container-fluid d-flex justify-content-between">
                 <div class="navbar-logo col-md-4 d-flex justify-content-between col-12">
-                    <a class="navbar-brand text-light" href="#">
+                    <a class="navbar-brand" href="#">
                         <img src="./src/iconos/health-icon.svg" alt="Logo" width="50" height="40" class="d-inline-block align-text-center">
                     Rolling Consultorios
                     </a>
@@ -37,7 +37,7 @@
                         </li>
                     </ul>
                     <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0 ms-5" id="btn-reg-log">
-                        <button class="btn btn-outline-info text-light">Registro</button>
+                        <button class="btn btn-secondary">Registro</button>
                         <button class="btn btn-primary" id="btn-login">Login</button>
                     </div>
                 </div>
@@ -58,7 +58,7 @@
                         </li>
                     </ul>
                     <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0" id="btn-reg-log">
-                        <button class="btn btn-outline-info text-light">Registro</button>
+                        <button class="btn btn-secondary">Registro</button>
                         <button class="btn btn-primary" id="btn-login">Login</button>
                     </div>
                 </div>
@@ -76,7 +76,7 @@
                         </div>
                         <div class="login-buttons">
                             <button class="btn btn-primary" id="btn-login-ingresar">Ingresar</button>
-                            <button class="btn btn-outline-light" id="btn-login-cancelar">Cancelar</button>
+                            <button class="btn btn-secondary" id="btn-login-cancelar">Cancelar</button>
                         </div>
                         <p class="text-light">Aun no tenes cuenta? <a class="btn btn-outline-info" href="#">Registrarse</a></p>
                     </form>
@@ -85,14 +85,14 @@
         </nav>
     </header>
     <main class="container contenedor d-flex justify-content-center align-items-center flex-column">
-        <h1 class="text-center">Oops!.. </h1>
+        <h1 class="text-center btn fs-1 fw-bold">Oops!.. </h1>
         <section class="container">
             <figure class="w-100 d-flex justify-content-center">
-                <img class="img-fluid" src="../img/estetoscopio-enredado.png" alt="estetoscopio enredado" width="500px" height="500px">
+                <img class="img-fluid" src="../img/estetoscopio-enredado.png" alt="estetoscopio enredado" width="500px" height="450px">
             </figure>
         </section>
         <p class="text-center">Parece que esta pagina <span class="fw-bold">no está disponible</span></p>
-        <button class="btn btn-secondary rounded-2 place-self-center mb-4">Volver a Página Principal</button>
+        <button class="btn btn-orange rounded-2 place-self-center mb-4">Volver a Página Principal</button>
     </main>
     
     <!-- SCRIPTS -->
