--- a/src/paginas/error404.html
+++ b/src/paginas/error404.html
@@ -14,7 +14,7 @@
             <div class="container-fluid d-flex justify-content-between">
                 <div class="navbar-logo col-md-4 d-flex justify-content-between col-12">
                     <a class="navbar-brand" href="#">
-                        <img src="./src/iconos/health-icon.svg" alt="Logo" width="50" height="40" class="d-inline-block align-text-center">
+                        <img src="../iconos/health-icon.svg" alt="Logo" width="50" height="40" class="d-inline-block align-text-center">
                     Rolling Consultorios
                     </a>
                     <button class="navbar-toggler border border-2 border-light" data-bs-theme="dark" type="button" data-bs-target="#navbarNav" id="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" popovertarget="menu-nav">
@@ -67,18 +67,18 @@
                     <form method="dialog" id="form-login">
                         <button type="button" class="btn-close m-1 border border-2 border-white p-1 bg-light" id="btn-close-login" aria-label="Close"></button>
                         <div class="input-group">
-                            <span for="usuario" class="input-group-text fw-bold text-light">Usuario</span>
+                            <span for="usuario" class="input-group-text">Usuario</span>
                             <input type="text" name="usuario" id="usuario" class="form-control" autofocus>
                         </div>
                         <div class="input-group">
-                            <span for="password" class="input-group-text fw-bold text-light">Password</span>
+                            <span for="password" class="input-group-text">Password</span>
                             <input type="password" name="password" id="password" class="form-control">
                         </div>
                         <div class="login-buttons">
                             <button class="btn btn-primary" id="btn-login-ingresar">Ingresar</button>
                             <button class="btn btn-secondary" id="btn-login-cancelar">Cancelar</button>
                         </div>
-                        <p class="text-light">Aun no tenes cuenta? <a class="btn btn-outline-info" href="#">Registrarse</a></p>
+                        <p class="">Aun no tenes cuenta? <a class="btn btn-orange btn-sm" href="#">Registrarse</a></p>
                     </form>
                 </dialog>
             </div>
@@ -97,6 +97,6 @@
     
     <!-- SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="./src/js/script.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 </html>
