--- a/src/paginas/error404.html
+++ b/src/paginas/error404.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rolling Clinic - Error</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/global.css">
+    <script
+      src="https://kit.fontawesome.com/3a0c1a8233.js"
+      crossorigin="anonymous"
+    ></script>
 </head>
 <body class="body-container">
     <header>
@@ -84,7 +88,7 @@
             </div>
         </nav>
     </header>
-    <main class="container contenedor d-flex justify-content-center align-items-center flex-column">
+    <main class="container contenedor d-flex justify-content-center align-items-center flex-column rounded-2">
         <h1 class="text-center btn fs-1 fw-bold">Oops!.. </h1>
         <section class="container">
             <figure class="w-100 d-flex justify-content-center">
@@ -94,6 +98,33 @@
         <p class="text-center">Parece que esta pagina <span class="fw-bold">no está disponible</span></p>
         <button class="btn btn-orange rounded-2 place-self-center mb-4">Volver a Página Principal</button>
     </main>
+
+    <footer class="container">
+        <article class="row d-flex justify-content-center justify-content-md-around align-items-center w-100">
+            <div class="col-lg-4 d-flex col-6 justify-content-around align-items-center bordesFooter align-self-stretch" >
+                <h3><i class="fa-solid fa-truck-medical fa-fade fa-2xl"> </i>           </h3>    
+                <div class="m-3"><img src="./img/ministerioSalud.jpg" alt="" srcset=""> </div>
+                </div>
+            <div class="col-lg-4 d-flex col-6  align-items-center bordesFooter"> 
+                <ul class="d-flex justify-content-between flex-column align-items-start gap-3 p-3 pt-3 w-100">
+                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Mis turnos</a></li>
+                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Contacto</a></li>
+                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Politicas de Privacidad</a></li>
+                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Ministerio de salud</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-4 d-flex col-12 justify-content-center align-items-stretch bordesFooter p-3" > 
+                <div class="container d-flex justify-content-between flex-column align-items-center" id="redesSocialesFooter">
+                    <p class="row">Nuestras redes sociales</p>
+                    <div class="d-flex mb-1 justify-content-between w-100 align-items-start flex-column footer-icons gap-2">
+                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#" target="_blank"><i class="fa-brands fa-x-twitter fa-lg"></i> Twitter</a>
+                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i> Facebook</a>
+                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#" target="_blank"><i class="fa-brands fa-instagram fa-lg"></i> Instagram</a>
+                    </div>
+                </div>
+            </div>
+        </article>
+    </footer>
     
     <!-- SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
