despues de la daily

--- a/pageMedico.html
+++ b/pageMedico.html
@@ -165,7 +165,7 @@
           </div>
           <div class="col-lg-10 col-md-8" id="textoBanner">
             <h2><i class="fa-solid fa-stethoscope"></i> Bienvenido/a <span id="spanUser"></span></h2>
-            <h3>En este panel podras ver todos los turnos que tienes pendientes para esta semana.</h3>
+            <h4>En este panel podras ver todos los turnos que tienes pendientes para esta semana. Tambien puedes editar y cancelar los turnos. </h4>
             <h5></h5>
           </div>
         </div>
