--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                             <a class="nav-link" href="#">Contacto</a>
                         </li>
                     </ul>
-                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0 ms-5" id="btn-reg-log">
-                        <button class="btn btn-outline-info text-light">Registro</button>
-                        <button class="btn btn-primary" id="btn-login">Login</button>
+                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0 ms-5">
+                        <button class="btn btn-secondary">Registro</button>
+                        <button class="btn btn-primary btn-login">Login</button>
                     </div>
                 </div>
                 <!-- MENU POPOVER MOBILE -->
@@ -58,9 +58,9 @@
                             <a class="nav-link" href="#">Contacto</a>
                         </li>
                     </ul>
-                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0" id="btn-reg-log">
-                        <button class="btn btn-outline-info text-light">Registro</button>
-                        <button class="btn btn-primary" id="btn-login">Login</button>
+                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0">
+                        <button class="btn btn-secondary">Registro</button>
+                        <button class="btn btn-primary btn-login">Login</button>
                     </div>
                 </div>
                 <!-- MODAL LOGIN -->
@@ -68,18 +68,18 @@
                     <form method="dialog" id="form-login">
                         <button type="button" class="btn-close m-1 border border-2 border-white p-1 bg-light" id="btn-close-login" aria-label="Close"></button>
                         <div class="input-group">
-                            <span for="usuario" class="input-group-text fw-bold text-light">Usuario</span>
+                            <span for="usuario" class="input-group-text">Usuario</span>
                             <input type="text" name="usuario" id="usuario" class="form-control" autofocus>
                         </div>
                         <div class="input-group">
-                            <span for="password" class="input-group-text fw-bold text-light">Password</span>
+                            <span for="password" class="input-group-text">Password</span>
                             <input type="password" name="password" id="password" class="form-control">
                         </div>
                         <div class="login-buttons">
                             <button class="btn btn-primary" id="btn-login-ingresar">Ingresar</button>
-                            <button class="btn btn-outline-light" id="btn-login-cancelar">Cancelar</button>
+                            <button class="btn btn-secondary" id="btn-login-cancelar">Cancelar</button>
                         </div>
-                        <p class="text-light">Aun no tenes cuenta? <a class="btn btn-outline-info" href="#">Registrarse</a></p>
+                        <p class="">Aun no tenes cuenta? <a class="btn btn-orange btn-sm" href="#">Registrarse</a></p>
                     </form>
                 </dialog>
             </div>
@@ -91,6 +91,6 @@
    
     <!-- SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="./src/js/script.js"></script>
+    <script src="./src/js/scriptLogin.js"></script>
 </body>
 </html>
