--- a/src/paginas/error404.html
+++ b/src/paginas/error404.html
@@ -40,9 +40,9 @@
                             <a class="nav-link" href="#">Contacto</a>
                         </li>
                     </ul>
-                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0 ms-5" id="btn-reg-log">
+                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0 ms-5">
                         <button class="btn btn-secondary">Registro</button>
-                        <button class="btn btn-primary" id="btn-login">Login</button>
+                        <button class="btn btn-primary btn-login">Login</button>
                     </div>
                 </div>
                 <!-- MENU POPOVER MOBILE -->
@@ -61,9 +61,9 @@
                             <a class="nav-link" href="#">Contacto</a>
                         </li>
                     </ul>
-                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0" id="btn-reg-log">
+                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0">
                         <button class="btn btn-secondary">Registro</button>
-                        <button class="btn btn-primary" id="btn-login">Login</button>
+                        <button class="btn btn-primary btn-login">Login</button>
                     </div>
                 </div>
                 <!-- MODAL LOGIN -->
@@ -96,7 +96,7 @@
             </figure>
         </section>
         <p class="text-center">Parece que esta pagina <span class="fw-bold">no está disponible</span></p>
-        <button class="btn btn-orange rounded-2 place-self-center mb-4">Volver a Página Principal</button>
+        <a href="../../index.html" class="btn btn-orange rounded-2 place-self-center mb-4">Volver a Página Principal</a>
     </main>
 
     <footer class="container">
@@ -128,6 +128,6 @@
     
     <!-- SCRIPTS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script src="../js/script.js"></script>
+    <script src="../js/scriptLogin.js"></script>
 </body>
 </html>
