--- a/src/paginas/medicos.html
+++ b/src/paginas/medicos.html
@@ -10,146 +10,88 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/global.css" />
     <script
       src="https://kit.fontawesome.com/3a0c1a8233.js"
       crossorigin="anonymous"
     ></script>
   </head>
   <body>
-    <h1>Rolling Clinic - Policonsultorios</h1>
-
     <header>
-      <!-- bg-body-tertiary -->
-      <nav class="navbar navbar-expand-md">
-        <div class="container-fluid d-flex justify-content-between">
-          <div
-            class="navbar-logo col-md-4 d-flex justify-content-between col-12"
-          >
-            <a class="navbar-brand text-light" href="#">
-              <img
-                src="./src/iconos/health-icon.svg"
-                alt="Logo"
-                width="50"
-                height="40"
-                class="d-inline-block align-text-center"
-              />
-              Rolling Consultorios
-            </a>
-            <button
-              class="navbar-toggler border border-2 border-light"
-              data-bs-theme="dark"
-              type="button"
-              data-bs-target="#navbarNav"
-              id="navbar-toggler"
-              aria-controls="navbarNav"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-              popovertarget="menu-nav"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          </div>
-          <div
-            class="d-md-flex justify-content-between align-items-center d-none"
-            id="navbarNav"
-          >
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Servicios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
-              </li>
-            </ul>
-            <div
-              class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0 ms-5"
-              id="btn-reg-log"
-            >
-              <button class="btn btn-outline-info text-light">Registro</button>
-              <button class="btn btn-primary" id="btn-login">Login</button>
+        <!-- bg-body-tertiary -->
+        <nav class="navbar navbar-expand-md ">
+            <div class="container-fluid d-flex justify-content-between">
+                <div class="navbar-logo col-md-4 d-flex justify-content-between col-12">
+                    <a class="navbar-brand" href="#">
+                        <img src="../iconos/health-icon.svg" alt="Logo" width="50" height="40" class="d-inline-block align-text-center">
+                    Rolling Consultorios
+                    </a>
+                    <button class="navbar-toggler border border-2 border-light" data-bs-theme="dark" type="button" data-bs-target="#navbarNav" id="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" popovertarget="menu-nav">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                </div>
+                <div class="d-md-flex justify-content-between align-items-center d-none" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contacto</a>
+                        </li>
+                    </ul>
+                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0 ms-5">
+                        <button class="btn btn-secondary">Registro</button>
+                        <button class="btn btn-primary btn-login">Login</button>
+                    </div>
+                </div>
+                <!-- MENU POPOVER MOBILE -->
+                <div class="menu-nav text-light" id="menu-nav" popover role="menu">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Nosotros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contacto</a>
+                        </li>
+                    </ul>
+                    <div class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0">
+                        <button class="btn btn-secondary">Registro</button>
+                        <button class="btn btn-primary btn-login">Login</button>
+                    </div>
+                </div>
+                <!-- MODAL LOGIN -->
+                <dialog id="modal-login">
+                    <form method="dialog" id="form-login">
+                        <button type="button" class="btn-close m-1 border border-2 border-white p-1 bg-light" id="btn-close-login" aria-label="Close"></button>
+                        <div class="input-group">
+                            <span for="usuario" class="input-group-text">Usuario</span>
+                            <input type="text" name="usuario" id="usuario" class="form-control" autofocus>
+                        </div>
+                        <div class="input-group">
+                            <span for="password" class="input-group-text">Password</span>
+                            <input type="password" name="password" id="password" class="form-control">
+                        </div>
+                        <div class="login-buttons">
+                            <button class="btn btn-primary" id="btn-login-ingresar">Ingresar</button>
+                            <button class="btn btn-secondary" id="btn-login-cancelar">Cancelar</button>
+                        </div>
+                        <p class="">Aun no tenes cuenta? <a class="btn btn-orange btn-sm" href="#">Registrarse</a></p>
+                    </form>
+                </dialog>
             </div>
-          </img>
-          <!-- MENU POPOVER MOBILE -->
-          <div class="menu-nav text-light" id="menu-nav" popover role="menu">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"
-                  >Inicio</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Servicios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
-              </li>
-            </ul>
-            <div
-              class="btn-reg-log d-flex gap-2 align-items-center mt-3 mt-md-0"
-              id="btn-reg-log"
-            >
-              <button class="btn btn-outline-info text-light">Registro</button>
-              <button class="btn btn-primary" id="btn-login">Login</button>
-            </div>
-          </div>
-          <!-- MODAL LOGIN -->
-          <dialog id="modal-login">
-            <form method="dialog" id="form-login">
-              <button
-                type="button"
-                class="btn-close m-1 border border-2 border-white p-1 bg-light"
-                id="btn-close-login"
-                aria-label="Close"
-              ></button>
-              <div class="input-group">
-                <span for="usuario" class="input-group-text fw-bold text-light"
-                  >Usuario</span
-                >
-                <input
-                  type="text"
-                  name="usuario"
-                  id="usuario"
-                  class="form-control"
-                  autofocus
-                />
-              </div>
-              <div class="input-group">
-                <span for="password" class="input-group-text fw-bold text-light"
-                  >Password</span
-                >
-                <input
-                  type="password"
-                  name="password"
-                  id="password"
-                  class="form-control"
-                />
-              </div>
-              <div class="login-buttons">
-                <button class="btn btn-primary" id="btn-login-ingresar">
-                  Ingresar
-                </button>
-                <button class="btn btn-outline-light" id="btn-login-cancelar">
-                  Cancelar
-                </button>
-              </div>
-              <p class="text-light">
-                Aun no tenes cuenta?
-                <a class="btn btn-outline-info" href="#">Registrarse</a>
-              </p>
-            </form>
-          </dialog>
-        </div>
-      </nav>
+        </nav>
     </header>
 
     <main>
@@ -211,41 +153,31 @@
       </section>
     </main>
 
-    <footer
-      class="container-fluid row d-flex justify-content-lg-around justify-content-md-around align-items-center w-100"
-    >
-      <div
-        class="col-lg-4 d-flex justify-content-around align-items-center"
-        style="max-width: 18rem"
-      >
-        <h3><i class="fa-solid fa-truck-medical fa-fade fa-2xl"> </i></h3>
-        <div class="m-3">
-          <img src="./img/ministerioSalud.jpg" alt="" srcset="" />
-        </div>
-      </div>
-      <div class="col-lg-4 d-flex row m-2" style="max-width: 18rem">
-        <a href="#" target="_blank">Mis turnos</a>
-        <a href="#" target="_blank">Contacto</a>
-        <a href="#" target="_blank">Politicas de Privacidad</a>
-        <a href="#" target="_blank">Ministerio de salud</a>
-      </div>
-      <div
-        class="col-lg-4 d-flex justify-content-center mb-3"
-        style="max-width: 18rem"
-      >
-        <div class="column">
-          <h4>Nuestras redes sociales</h4>
-          <a href="#" target="_blank"
-            ><i class="fa-brands fa-x-twitter fa-lg m-2"></i
-          ></a>
-          <a href="#" target="_blank"
-            ><i class="fa-brands fa-facebook fa-lg m-2"></i
-          ></a>
-          <a href="#" target="_blank"
-            ><i class="fa-brands fa-instagram fa-lg m-2"></i
-          ></a>
-        </div>
-      </div>
+    <footer class="container">
+        <article class="row d-flex justify-content-center justify-content-md-around align-items-center w-100">
+            <div class="col-lg-4 d-flex col-6 justify-content-around align-items-center bordesFooter align-self-stretch" >
+                <h3><i class="fa-solid fa-truck-medical fa-fade fa-2xl"> </i>           </h3>    
+                <div class="m-3"><img src="./img/ministerioSalud.jpg" alt="" srcset=""> </div>
+                </div>
+            <div class="col-lg-4 d-flex col-6  align-items-center bordesFooter"> 
+                <ul class="d-flex justify-content-between flex-column align-items-start gap-3 p-3 pt-3 w-100">
+                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Mis turnos</a></li>
+                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Contacto</a></li>
+                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Politicas de Privacidad</a></li>
+                    <li class="list-group-item w-100"><a class="footer-links" href="#" target="_blank">Ministerio de salud</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-4 d-flex col-12 justify-content-center align-items-stretch bordesFooter p-3" > 
+                <div class="container d-flex justify-content-between flex-column align-items-center" id="redesSocialesFooter">
+                    <p class="row">Nuestras redes sociales</p>
+                    <div class="d-flex mb-1 justify-content-between w-100 align-items-start flex-column footer-icons gap-2">
+                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#" target="_blank"><i class="fa-brands fa-x-twitter fa-lg"></i> Twitter</a>
+                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#" target="_blank"><i class="fa-brands fa-facebook fa-lg"></i> Facebook</a>
+                        <a class="d-flex justify-content-start align-items-center ps-2 gap-2" href="#" target="_blank"><i class="fa-brands fa-instagram fa-lg"></i> Instagram</a>
+                    </div>
+                </div>
+            </div>
+        </article>
     </footer>
 
     <script
@@ -253,7 +185,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="../js/scriptTurnos.js"></script>
+    <script type="module" src="../js/scriptMedicos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
