--- a/src/paginas/medicos.html
+++ b/src/paginas/medicos.html
@@ -113,9 +113,9 @@
         </div>
       </section>
 
-      <section>
+      <section class="container">
         <h2>Turnos</h2>
-        <table class="table table-hover" >
+        <table class="table table-hover container" >
             <thead>
                 <tr>
                   <th scope="col"><!-- <i class="fa-solid fa-user"></i> -->Turno ID</th>
