creacion del index.html de las cards

--- a/index.html
+++ b/index.html
@@ -1,11 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rolling Clinic - Policonsultorios</title>
-</head>
-<body>
-    <h1>Rolling Clinic - Policonsultorios</h1>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Carrusel Cards Swiper</title>
+    <!-- Link Swiper's CSS -->
+    <link rel="stylesheet" href="src/css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
+  </head>
+
+  <body>
+    <!-- Swiper -->
+    <div class="container">
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-container mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="/src/images/cardiologia.jpg" alt="" />
+            <div class="card-description">
+              <div class="card-title">
+                <h4>Cardiología</h4>
+              </div>
+              <div class="card-text">
+                <p>
+                  Nuestro Servicio de Cardiología desarrolla una intensa
+                  actividad con total integración a otras especialidades de la
+                  Clínica.
+                </p>
+              </div>
+              <div class="card-link">
+                <a href="cardiologia.html" target="_blank">Más Información</a>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="/src/images/oftalmologia.jpg" alt="" />
+            <div class="card-description">
+              <div class="card-title">
+                <h4>Oftalmología</h4>
+              </div>
+              <div class="card-text">
+                <p>
+                  El servicio de Oftalmología de la Clínica Rolling cuenta con
+                  más de 15 profesionales dedicados a dar respuesta a patologias
+                  oculares.
+                </p>
+              </div>
+              <div class="card-link">
+                <a href="oftalmologia.html" target="_blank">Más Información</a>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="/src/images/ginecologia.jpg" alt="" />
+            <div class="card-description">
+              <div class="card-title">
+                <h4>Ginecología</h4>
+              </div>
+              <div class="card-text">
+                <p>
+                  El Servicio de Ginecología de nuestra institución abarca todas
+                  las áreas de la especialidad, y brinda la más alta calidad de
+                  atención.
+                </p>
+              </div>
+              <div class="card-link">
+                <a href="ginecologia.html" target="_blank">Más Información</a>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="/src/images/neurologia.jpg" alt="" />
+            <div class="card-description">
+              <div class="card-title">
+                <h4>Neurología</h4>
+              </div>
+              <div class="card-text">
+                <p>
+                  Nuestro Servicio de Neurología está conformado por neurólogos
+                  especializados que realizan actividades asistenciales, de
+                  docencia e investigación.
+                </p>
+              </div>
+              <div class="card-link">
+                <a href="neurologia.html" target="_blank">Más Información</a>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <img src="/src/images/pediatria.jpg" alt="" />
+            <div class="card-description">
+              <div class="card-title">
+                <h4>Pediatría</h4>
+              </div>
+              <div class="card-text">
+                <p>
+                  El Servicio de Pediatría cuenta con profesionales y
+                  especialistas de alta trayectoria, experiencia y calidad
+                  científica, con sensibilidad y valor humano.
+                </p>
+              </div>
+              <div class="card-link">
+                <a href="pediatria.html" target="_blank">Más Información</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <img src="/src/images/ortopedia.jpg" alt="" />
+            <div class="card-description">
+              <div class="card-title">
+                <h4>Ortopedia</h4>
+              </div>
+              <div class="card-text">
+                <p>
+                  El Servicio de Ortopedia se caracteriza por la atención de
+                  pacientes con enfermedades o patologías óseas, articulares,
+                  musculares o del aparato de la locomoción.
+                </p>
+              </div>
+              <div class="card-link">
+                <a href="ortopedia.html" target="_blank">Más Información</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <img src="/src/images/psiquiatria.jpg" alt="" />
+            <div class="card-description">
+              <div class="card-title">
+                <h4>Psiquiatría</h4>
+              </div>
+              <div class="card-text">
+                <p>
+                  El Servicio realiza el abordaje de diversos trastornos. Brinda
+                  una atención integral ya que articula su atención con el resto
+                  de los servicios de la clínica.
+                </p>
+              </div>
+              <div class="card-link">
+                <a href="psiquiatria.html" target="_blank">Más Información</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="swiper-slide">
+            <img src="/src/images/endocrinologia.jpg" alt="" />
+            <div class="card-description">
+              <div class="card-title">
+                <h4>Endocrinología</h4>
+              </div>
+              <div class="card-text">
+                <p>
+                  El Servicio de Endocrinología de la Clínica trabaja en
+                  conjunto con otras áreas para un mejor abordaje, diagnóstico y
+                  terapéutico de nuestros pacientes.
+                </p>
+              </div>
+              <div class="card-link">
+                <a href="endocrinologia.html" target="_blank"
+                  >Más Información</a
+                >
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="swiper-slide">
+              <img src="/src/images/gastroenterologia.jpg" alt="" />
+              <div class="card-description">
+                <div class="card-title">
+                  <h4>Gastroenterología</h4>
+                </div>
+                <div class="card-text">
+                  <p>
+                    Ofrece una asistencia médica integral, personalizada y
+                    humana con el objetivo de brindar diagnósticos y
+                    tratamientos precisos en diversas patologías digestivas.
+                  </p>
+                </div>
+                <div class="card-link">
+                  <a href="gastroenterologia.html" target="_blank"
+                    >Más Información</a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Swiper JS -->
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="/src/js/app.js"></script>
+  </body>
 </html>
