arreglos en el index

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
       <div class="swiper-container mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="/src/images/cardiologia.jpg" alt="" />
+            <img
+              src="/src/images/cardiologia.jpg"
+              alt="Servicio de Cardiología"
+            />
             <div class="card-description">
               <div class="card-title">
                 <h4>Cardiología</h4>
@@ -32,12 +35,17 @@
                 </p>
               </div>
               <div class="card-link">
-                <a href="cardiologia.html" target="_blank">Más Información</a>
+                <a href="src/pages/cardiologia.html" target="_blank"
+                  >Más Información</a
+                >
               </div>
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="/src/images/oftalmologia.jpg" alt="" />
+            <img
+              src="/src/images/oftalmologia.jpg"
+              alt="Servicio de Oftalmología"
+            />
             <div class="card-description">
               <div class="card-title">
                 <h4>Oftalmología</h4>
@@ -50,12 +58,17 @@
                 </p>
               </div>
               <div class="card-link">
-                <a href="oftalmologia.html" target="_blank">Más Información</a>
+                <a href="src/pages/oftalmologia.html" target="_blank"
+                  >Más Información</a
+                >
               </div>
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="/src/images/ginecologia.jpg" alt="" />
+            <img
+              src="/src/images/ginecologia.jpg"
+              alt="Servicio de Ginecología"
+            />
             <div class="card-description">
               <div class="card-title">
                 <h4>Ginecología</h4>
@@ -68,12 +81,17 @@
                 </p>
               </div>
               <div class="card-link">
-                <a href="ginecologia.html" target="_blank">Más Información</a>
+                <a href="src/pages/ginecologia.html" target="_blank"
+                  >Más Información</a
+                >
               </div>
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="/src/images/neurologia.jpg" alt="" />
+            <img
+              src="/src/images/neurologia.jpg"
+              alt="Servicio de Neurología"
+            />
             <div class="card-description">
               <div class="card-title">
                 <h4>Neurología</h4>
@@ -86,12 +104,14 @@
                 </p>
               </div>
               <div class="card-link">
-                <a href="neurologia.html" target="_blank">Más Información</a>
+                <a href="src/pages/neurologia.html" target="_blank"
+                  >Más Información</a
+                >
               </div>
             </div>
           </div>
           <div class="swiper-slide">
-            <img src="/src/images/pediatria.jpg" alt="" />
+            <img src="/src/images/pediatria.jpg" alt="Servicio de Pediatría" />
             <div class="card-description">
               <div class="card-title">
                 <h4>Pediatría</h4>
@@ -104,13 +124,15 @@
                 </p>
               </div>
               <div class="card-link">
-                <a href="pediatria.html" target="_blank">Más Información</a>
+                <a href="src/pages/pediatria.html" target="_blank"
+                  >Más Información</a
+                >
               </div>
             </div>
           </div>
 
           <div class="swiper-slide">
-            <img src="/src/images/ortopedia.jpg" alt="" />
+            <img src="/src/images/ortopedia.jpg" alt="Servicio de Ortopedia" />
             <div class="card-description">
               <div class="card-title">
                 <h4>Ortopedia</h4>
@@ -123,13 +145,18 @@
                 </p>
               </div>
               <div class="card-link">
-                <a href="ortopedia.html" target="_blank">Más Información</a>
+                <a href="/src/pages/ortopedia.html" target="_blank"
+                  >Más Información</a
+                >
               </div>
             </div>
           </div>
 
           <div class="swiper-slide">
-            <img src="/src/images/psiquiatria.jpg" alt="" />
+            <img
+              src="/src/images/psiquiatria.jpg"
+              alt="Servicio de Psiquiatría"
+            />
             <div class="card-description">
               <div class="card-title">
                 <h4>Psiquiatría</h4>
@@ -142,13 +169,18 @@
                 </p>
               </div>
               <div class="card-link">
-                <a href="psiquiatria.html" target="_blank">Más Información</a>
+                <a href="src/pages/psiquiatria.html" target="_blank"
+                  >Más Información</a
+                >
               </div>
             </div>
           </div>
 
           <div class="swiper-slide">
-            <img src="/src/images/endocrinologia.jpg" alt="" />
+            <img
+              src="/src/images/endocrinologia.jpg"
+              alt=" Servicio de Endocrinología"
+            />
             <div class="card-description">
               <div class="card-title">
                 <h4>Endocrinología</h4>
@@ -161,31 +193,33 @@
                 </p>
               </div>
               <div class="card-link">
-                <a href="endocrinologia.html" target="_blank"
+                <a href="/src/pages/endocrinologia.html" target="_blank"
                   >Más Información</a
                 >
               </div>
             </div>
           </div>
-          <div>
-            <div class="swiper-slide">
-              <img src="/src/images/gastroenterologia.jpg" alt="" />
-              <div class="card-description">
-                <div class="card-title">
-                  <h4>Gastroenterología</h4>
-                </div>
-                <div class="card-text">
-                  <p>
-                    Ofrece una asistencia médica integral, personalizada y
-                    humana con el objetivo de brindar diagnósticos y
-                    tratamientos precisos en diversas patologías digestivas.
-                  </p>
-                </div>
-                <div class="card-link">
-                  <a href="gastroenterologia.html" target="_blank"
-                    >Más Información</a
-                  >
-                </div>
+
+          <div class="swiper-slide">
+            <img
+              src="/src/images/gastroenterologia.jpg"
+              alt="Servicio de Gastroenterología"
+            />
+            <div class="card-description">
+              <div class="card-title">
+                <h4>Gastroenterología</h4>
+              </div>
+              <div class="card-text">
+                <p>
+                  Ofrece una asistencia médica integral, personalizada y humana
+                  con el objetivo de brindar diagnósticos y tratamientos
+                  precisos en diversas patologías digestivas.
+                </p>
+              </div>
+              <div class="card-link">
+                <a href="src/pages/gastroenterologia.html" target="_blank"
+                  >Más Información</a
+                >
               </div>
             </div>
           </div>
