imagenes de los medicos de las cards

--- a/src/pages/cardiologia.html
+++ b/src/pages/cardiologia.html
@@ -10,7 +10,7 @@
     
     <section id="split-screen">
         <div class="left">
-            <img src="images/dr juan perez cardiologia.jpg" alt="Dr. Juan Perez">
+            <img src="/src/images/dr juan perez cardiologia.jpg" alt="Dr. Juan Perez">
             <h1>Dr: Juan Pérez - Jefe de Servicio. 
                 M.P: 1387 </h1>
         </div>
