--- a/src/pages/endocrinologia.html
+++ b/src/pages/endocrinologia.html
@@ -9,7 +9,7 @@
   <body>
     <section id="split-screen">
       <div class="left">
-        <img src="images/endocrinologa patricia.jpg" alt="Dra. Patricia" />
+        <img src="/src/images/endocrinologa patricia.jpg" alt="Dra. Patricia" />
         <h1>Dra: Patricia Vargas - Jefa de Servicio. M.P: 8754</h1>
       </div>
       <div class="right">
