--- a/src/pages/gastroenterologia.html
+++ b/src/pages/gastroenterologia.html
@@ -10,7 +10,7 @@
 
     <section id="split-screen">
         <div class="left">
-            <img src="images/gastroenterologo marcos.jpg" alt="Dr. Marcos">
+            <img src="/src/images/gastroenterologo marcos.jpg" alt="Dr. Marcos">
             <h1>Dr: Marcos Sánchez - Jefe de Servicio. 
                 M.P: 1497 </h1>
         </div>
