--- a/src/pages/ginecologia.html
+++ b/src/pages/ginecologia.html
@@ -10,7 +10,7 @@
     
     <section id="split-screen">
         <div class="left">
-            <img src="images/ginecologa ana.jpg" alt="Dra. Ana">
+            <img src="/src/images/ginecologa ana.jpg" alt="Dra. Ana">
             <h1>Dra: Ana Sánchez - Jefa de Servicio. 
                 M.P: 1237 </h1>
         </div>
