--- a/src/pages/neurologia.html
+++ b/src/pages/neurologia.html
@@ -10,7 +10,7 @@
     
     <section id="split-screen">
         <div class="left">
-            <img src="images/neurologo jorge.jpg" alt="Dr. Jorge">
+            <img src="/src/images/neurologo jorge.jpg" alt="Dr. Jorge">
             <h1>Dr: Jorge Ramirez - Jefe de Servicio. 
                 M.P: 7645 </h1>
         </div>
