--- a/src/pages/oftalmologia.html
+++ b/src/pages/oftalmologia.html
@@ -10,7 +10,7 @@
     
     <section id="split-screen">
         <div class="left">
-            <img src="images/oftalmologa laura.jpg" alt="Dra. Laura">
+            <img src="/src/images/oftalmologa laura.jpg" alt="Dra. Laura">
             <h1>Dra: Laura Fernández - Jefa de Servicio. 
                 M.P: 8976 </h1>
         </div>
