--- a/src/pages/ortopedia.html
+++ b/src/pages/ortopedia.html
@@ -10,7 +10,7 @@
     
     <section id="split-screen">
         <div class="left">
-            <img src="images/ortopedia andres.jpg" alt="Dr. Andres">
+            <img src="/src/images/ortopedia andres.jpg" alt="Dr. Andres">
             <h1>Dr: Andres Martínez - Jefe de Servicio. 
                 M.P: 3498 </h1>
         </div>
