--- a/src/pages/pediatria.html
+++ b/src/pages/pediatria.html
@@ -10,7 +10,7 @@
     
     <section id="split-screen">
         <div class="left">
-            <img src="images/pediatra carlos rodri.jpg" alt="Dr. Carlos">
+            <img src="/src/images/pediatra carlos rodri.jpg" alt="Dr. Carlos">
             <h1>Dr: Carlos Rodríguez - Jefe de Servicio. 
                 M.P: 3498 </h1>
         </div>
