--- a/src/pages/psiquiatria.html
+++ b/src/pages/psiquiatria.html
@@ -11,7 +11,7 @@
  
     <section id="split-screen">
         <div class="left">
-            <img src="images/psiquiatria julia.jpg" alt="Dra. Julia">
+            <img src="/src/images/psiquiatria julia.jpg" alt="Dra. Julia">
             <h1>Dra: Julia Torres - Jefa de Servicio. 
                 M.P: 3321 </h1>
         </div>
